Use design tokens to fix dark mode incompatibility issues on Special:Import page

--- a/modules/ext.FileImporter.Special.less
+++ b/modules/ext.FileImporter.Special.less
@@ -12,7 +12,7 @@
 // Mostly copied from the .editOptions styles, see …/mediawiki.action/mediawiki.action.edit.styles.less
 .mw-importfile-parsedContent,
 .mw-importfile-importOptions {
-	background-color: #eaecf0;
+	background-color: @background-color-interactive;
 	border: @border-width-base @border-style-base @border-color-subtle;
 	border-radius: @border-radius-base;
 	margin-top: 1em;
@@ -21,7 +21,7 @@
 
 .mw-importfile-parsedContent {
 	// Same as .catlinks
-	background-color: #f8f9fa;
+	background-color: @background-color-interactive-subtle;
 
 	.mw-parser-output {
 		> :first-child {
